# unsplash_crawler

./: .gitignore  __main__.py  pyproject.toml  scrapy.cfg
unsplash_crawler/: items.py  middlewares.py  pipelines.py  settings.py
unsplash_crawler/spiders/: unsplashcom.py
