[tool.poetry]
name = "unsplash_crawler"
version = "0.1.0"
description = "Crawler for www.unsplash.com site"
authors = ["Rikov Andrey <rikov.andrey@gmail.com>"]

[tool.poetry.dependencies]
fake-useragent = "^1.3.0"
python = "^3.11"
Scrapy = "^2.11.0"
Pillow = "^10.1.0"
pymongo = "^4.5.0"

[tool.isort]
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"